--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 
     <label for="stream">Select Stream:</label>
     <select id="stream">
-      <option value="pcm">PCM (Engineering)</option>
-      <option value="pcb">PCB (Medical / Agri)</option>
+      <option value="pcm">Engineering (PCM)</option>
+      <option value="pcb">Veterinary / Agri (PCB)</option>
     </select>
 
     <label for="board">Board Marks (out of 300):</label>
@@ -101,24 +101,37 @@
         return;
       }
 
-      // Calculate final normalized score out of 100
+      // Normalized score out of 100
       const boardScore = (board / 300) * 50;
       const kcetScore = (kcet / 180) * 50;
       const finalScore = boardScore + kcetScore;
 
-      // Rank estimation logic based on finalScore with tighter ranges
       let rankEstimate = "";
-
-      if (finalScore >= 90) rankEstimate = "Below 2,000";
-      else if (finalScore >= 85) rankEstimate = "2,000 - 5,000";
-      else if (finalScore >= 80) rankEstimate = "5,000 - 10,000";
-      else if (finalScore >= 75) rankEstimate = "10,000 - 15,000";
-      else if (finalScore >= 70) rankEstimate = "15,000 - 25,000";
-      else if (finalScore >= 65) rankEstimate = "25,000 - 35,000";
-      else if (finalScore >= 60) rankEstimate = "35,000 - 50,000";
-      else if (finalScore >= 55) rankEstimate = "55,000 - 65,000";
-      else if (finalScore >= 50) rankEstimate = "65,000 - 80,000";
-      else rankEstimate = "Above 1,00,000";
+      if (stream === "pcm") {
+  // Engineering estimation (unchanged)
+  if (finalScore >= 90) rankEstimate = "Below 2,000";
+  else if (finalScore >= 85) rankEstimate = "2,000 - 5,000";
+  else if (finalScore >= 80) rankEstimate = "5,000 - 10,000";
+  else if (finalScore >= 75) rankEstimate = "10,000 - 15,000";
+  else if (finalScore >= 70) rankEstimate = "15,000 - 25,000";
+  else if (finalScore >= 65) rankEstimate = "25,000 - 35,000";
+  else if (finalScore >= 60) rankEstimate = "35,000 - 50,000";
+  else if (finalScore >= 55) rankEstimate = "55,000 - 65,000";
+  else if (finalScore >= 50) rankEstimate = "65,000 - 80,000";
+  else rankEstimate = "Above 1,00,000";
+} else {
+  // PCB/Veterinary estimation (updated)
+  if (finalScore >= 90) rankEstimate = "Below 2,000";
+  else if (finalScore >= 85) rankEstimate = "2,000 - 5,000";
+  else if (finalScore >= 80) rankEstimate = "5,000 - 9,000";
+  else if (finalScore >= 75) rankEstimate = "9,000 - 14,000";
+  else if (finalScore >= 70) rankEstimate = "14,000 - 25,000";
+  else if (finalScore >= 65) rankEstimate = "25,000 - 37,000";
+  else if (finalScore >= 60) rankEstimate = "37,000 - 47,000";
+  else if (finalScore >= 55) rankEstimate = "47,000 - 55,000";
+  else if (finalScore >= 50) rankEstimate = "55,000 - 68,000";
+  else rankEstimate = "Above 1,00,000";
+}
 
       result.innerText = `Estimated Rank (${stream.toUpperCase()}): ${rankEstimate}`;
     }
