--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
       const kcetPercent = (kcet / 180) * 100;
       const finalScore = (boardPercent + kcetPercent) / 2;
 
-      let rankEstimate = "Above 1,50,000";
+      let rankEstimate = "Above 1,80,000";
 
       const engineeringRanks = [
-        [95, 0, "Below 1,000"], [93, 95, "1,000 - 2,000"], [91, 93, "2,000 - 3,500"],
+        [97,100,"Below 400"],[95, 97, "Below 1,000"], [93, 95, "1,000 - 2,000"], [91, 93, "2,000 - 3,500"],
         [89, 91, "3,500 - 5,000"], [87, 89, "5,000 - 7,000"], [85, 87, "7,000 - 9,000"],
         [83, 85, "9,000 - 12,000"], [81, 83, "12,000 - 15,000"], [79, 81, "15,000 - 18,000"],
         [77, 79, "18,000 - 21,000"], [75, 77, "21,000 - 25,000"], [73, 75, "25,000 - 30,000"],
@@ -117,18 +117,19 @@
         [65, 67, "45,000 - 50,000"], [63, 65, "50,000 - 55,000"], [61, 63, "55,000 - 60,000"],
         [59, 61, "60,000 - 65,000"], [57, 59, "65,000 - 70,000"], [55, 57, "70,000 - 75,000"],
         [53, 55, "75,000 - 85,000"], [50, 53, "85,000 - 95,000"], [47, 50, "95,000 - 1,00,000"],
-        [40, 47, "1,00,000 - 1,30,000"]
+        [40, 47, "1,00,000 - 1,30,000"],[35,40,"1,30,000 - 1,60,000"]
       ];
 
       const veterinaryRanks = [
-        [95, 0, "Below 800"], [93, 95, "800 - 1,500"], [91, 93, "1,500 - 3,000"],
+        [97,100,"Below 300"],[95, 97, "Below 800"], [93, 95, "800 - 1,500"], [91, 93, "1,500 - 3,000"],
         [89, 91, "3,000 - 5,000"], [87, 89, "5,000 - 7,000"], [85, 87, "7,000 - 9,000"],
         [83, 85, "9,000 - 11,000"], [81, 83, "11,000 - 13,000"], [79, 81, "13,000 - 16,000"],
         [77, 79, "16,000 - 20,000"], [75, 77, "20,000 - 24,000"], [73, 75, "24,000 - 28,000"],
         [71, 73, "28,000 - 32,000"], [69, 71, "32,000 - 36,000"], [67, 69, "36,000 - 40,000"],
         [65, 67, "40,000 - 45,000"], [63, 65, "45,000 - 50,000"], [61, 63, "50,000 - 55,000"],
         [59, 61, "55,000 - 60,000"], [57, 59, "60,000 - 70,000"], [55, 57, "70,000 - 80,000"],
-        [50, 55, "80,000 - 95,000"], [47, 50, "95,000 - 1,00,000"],[40, 47, "1,00,000 - 1,30,000"]
+        [50, 55, "80,000 - 95,000"], [47, 50, "95,000 - 1,00,000"],[40, 47, "1,00,000 - 1,30,000"],[35,40, "1,30,000 - 1,50,000"],
+        [30,35, "1,50,000 - 1,70,000"]
       ];
 
       const ranks = stream === "pcm" ? engineeringRanks : veterinaryRanks;
